vpn: fix crash when VPN service times-out to start

Previously, we took a reference when scheduling _daemon_exec_timeout().
That was changed, but we still wrongly unref'ed the VPN connection
on timeout.

Related: https://bugzilla.gnome.org/show_bug.cgi?id=766307

Fixes: 6c12f04e87b439832bdbac57bc8bd85e369a0bc9
(cherry picked from commit 1ec5e0b9584a398333e5522e053f77d941fd5c4f)